Add hightight to the hovered/selected item in context menu
See https://github.com/adesurirey/typora-notes-dark-theme/pull/9#issuecomment-680893545

--- a/theme/notes-dark.css
+++ b/theme/notes-dark.css
@@ -474,6 +474,9 @@ code {
 .dropdown-menu .divider {
   display: none;
 }
+.context-menu.dropdown-menu li.active a{
+    background-color: var(--dark-trait);
+ }
 
 .file-node-background {
   height: 31px;
